fix text alignment issue in the comic overscroll text.

--- a/comic.css
+++ b/comic.css
@@ -45,7 +45,5 @@
 }
 #message {
   width: 70%;
-  display: block;
-  padding-left: 15%;
   max-width: 400px;
 }
